--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-War-in-the-Air_780
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Wells, H. G. (Herbert George)
@@ -16,6 +19,8 @@ description: "The War in the Air, a military science fiction novel by H. G. Well
   \ warfare and the coming of World War I. The novel's hero is Bert Smallways, a \"\
   forward-thinking young man\" and a \"kind of bicycle engineer of the let's-'ave-a-look-at-it\
   \ and enamel-chipping variety.\"\n From Wikipedia (CC BY-SA)."
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/780#The-War-in-the-Air
 gutenberg_issued: '1997-01-01'
 gutenberg_type: Text
 identifiers:
